fixed broken layout on mobile

--- a/src/app/platform/platform-layout/platform-header/platform-header.component.scss
+++ b/src/app/platform/platform-layout/platform-header/platform-header.component.scss
@@ -14,7 +14,16 @@
     height: $header-height;
   }
   @media (max-width: 767px) {
-    padding: 0 15px;
+    padding: 0 10px;
+  }
+
+  .header-logo {
+    @media (max-width: 575px) {
+      img {
+        max-width: 80px;
+        padding-bottom: 8px;
+      }
+    }
   }
 }
 
@@ -47,5 +56,8 @@
     border-right: 6px solid transparent;
     border-top: 6px solid #7b7b7b;
     border-left: 6px solid transparent;
+    @media (max-width: 575px) {
+      right: -15px;
+    }
   }
 }
